scripts: update DB conversion script
Rewrite the conversion script in python.
Handle extra steps beyond the schema change:
   - convert extent sizes from json::str to json::int
   - convert media stats from json::str to json::int

Change-Id: I42a69aa8d453fbaf66e04347b81a8c6b1c3991af
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/2633
Reviewed-by: Linter
Tested-by: Jenkins
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>

--- a/doc/INSTALL
+++ b/doc/INSTALL
@@ -12,7 +12,7 @@ service postgresql-9.4 start
 
 # If you upgrade from phobos 1.0.x, run the DB conversion script
 # (edit it to set the right DB name and password)
-/usr/sbin/pho_convert_db_10to11.sh
+/usr/sbin/pho_convert_db
 # 'y' to confirm
 
 # Edit '/var/lib/pgsql/9.4/data/pg_hba.conf'
