pho_convert_db: rename to phobos_db and move code to phobos py lib
This commit prepares the merge of all db helpers in the phobos_db
script.

Change-Id: I2a18f302be9b6122988f54785919c3c0f3e8bb3d
Signed-off-by: Florent MONJALET <florent.monjalet@cea.fr>
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/3976
Reviewed-by: Linter
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>

--- a/doc/INSTALL
+++ b/doc/INSTALL
@@ -22,7 +22,7 @@ systemctl start postgresql-9.4.service
 
 # If you upgrade from phobos 1.0.x, run the DB conversion script
 # (edit it to set the right DB name and password)
-/usr/sbin/pho_convert_db
+/usr/sbin/phobos_db migrate
 # 'y' to confirm
 
 # create phobos DB and tables
