--- a/doc/INSTALL
+++ b/doc/INSTALL
@@ -25,9 +25,9 @@ systemctl start postgresql-9.4.service
 /usr/sbin/phobos_db migrate
 # 'y' to confirm
 
-# create phobos DB and tables
-pho_dss_helper setup_db
-pho_dss_helper setup_tables
+# Otherwise, create phobos DB and tables (the password for SQL phobos user will
+# be prompted for unless provided with -p)
+/usr/sbin/phobos_db setup_db -s
 
 # play!
 phobos drive add --unlock /dev/IBMtape0
