cli,admin: send multiple format requests at the same time
Change-Id: Ic24e75c62d98371d44322d3d190600e215b361a2
Signed-off-by: Yoann Valeri <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/10281
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,11 @@
 # CHANGELOG UPDATES
 
+## 1.94
+
+* The "phobos_admin_format" API function has been modified to be able to send
+multiple format requests in a single call. The medium id provided thus becomes
+an array of medium ids, and the length of that array is added as a parameter.
+
 ## 1.93
 
 * The "simple" layout is no longer available. It cannot be used through the CLI
