pkg: update to 1.94.1
Change-Id: I250bd2ed0b559f128323ca3ba79ef37a11ff1135
Signed-off-by: VALERI Yoann <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/10961
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,10 +2,23 @@
 
 ## Ongoing
 
-* The "phobos xxx lock" API has changed: '--force' option is removed. The option
-was only considered with devices, so removing it for media will not alter its
-behavior.
-* The "phobos drive lock" API has changed: '--wait' option is added. Its
+* Grouped read algorithm for tapes
+* Locate update for pre-locking
+
+## 1.94.1
+
+* Added RADOS as data storage backend (no package available yet)
+* Added module-loader to manage io, fs, dev, lib and layout adapters dynamically
+* Added drive migrate command
+* Improved command documentation
+* Internal LRS parallelization (read, write and format managed by device
+  threads)
+* Added locate modification design
+* Modified drive lock API and command:
+    - The "phobos xxx lock" API has changed: '--force' option is removed. The
+option was only considered with devices, so removing it for media will not alter
+its behavior.
+    - The "phobos drive lock" API has changed: '--wait' option is added. Its
 behavior is the same as the previous '--force' option.
 
 ## 1.94
