API: early locking at locate
Change-Id: I416a0ac5c2e9f2c729f6a097a21b25a301296953
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11016
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,9 @@
 
 * Grouped read algorithm for tapes
 * Locate update for pre-locking
+    - We add two new parameters to the "phobos_locate" API call: 'focus_host'
+      and 'nb_new_lock'.
+    - We add the '--focus-host' option to the "phobos locate obj" command.
 
 ## 1.94.1
 
