tape_library_mtx_test.bash
This scripts simulates with "mtx [status|load|unload]" commands how
phobos manages a tape library during a massive format session and
exits at first mtx error.

Change-Id: I432ba23065a8f4534ac64cb059a2ff774586dc8f
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11102
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@
 
 ## Ongoing
 
+* Add a script to test tape library
 * The "phobos_admin_format" API function has been modified to be able to format
 media whose status is not blank. A "force" parameter is added to manage this.
 * Grouped read algorithm for tapes
