admin: add option `--force` to `phobos tape format`
The option allows one to format a tape whatever the status of its file
system. The command does not modify the contents of object and layout
tables in the database.

The option will be added for other families when the format operation
will erase the old contents of media.

Change-Id: I393b064416b2e0c27c15481ea9277f0ed8b72496
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11103
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,8 @@
 
 ## Ongoing
 
+* The "phobos_admin_format" API function has been modified to be able to format
+media whose status is not blank. A "force" parameter is added to manage this.
 * Grouped read algorithm for tapes
 * Locate update for pre-locking
     - We add two new parameters to the "phobos_locate" API call: 'focus_host'
