layout: compute and store extent md5
Change-Id: I35396897b732f994c52e4df1be73c1d21eae5e21
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11306
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@
 
 ## Ongoing
 
+* md5 checksum computed and stored in DSS for each extent during put
 * Phobos API has been changed. Any call to a Phobos function must be done after
   initializing its context using `phobos_init()`. To release the context, use
   `phobos_fini()`.
