cli: add '--lyt' and '--layout-params' to PUT commands
Until now, both arguments for defining the layout and its params were
respectively spelled '--layout' and '--lyt-params'. For consistency and
to avoid breaking the API, we now allow both spellings.

Change-Id: I7660920c959290af5320bc558f6f3719c60a76c5
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11507
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -15,6 +15,8 @@ media whose status is not blank. A "force" parameter is added to manage this.
     - We add two new parameters to the "phobos_locate" API call: 'focus_host'
       and 'nb_new_lock'.
     - We add the '--focus-host' option to the "phobos locate obj" command.
+* Phobos CLI is updated. The options '--layout' and '--lyt-params' can also
+  be respectively spelled '--lyt' and '--layout-params' for consistency.
 
 ## 1.94.1
 
