db: rename db version 2.0 to 1.95 and remove DISK family
We want to align db versions on phobos versions.

DISK family was present in the design since the beginning
but was never developped.

Change-Id: Ibbd59bc48afb7069fe1e019f46adb0e77f5614c0
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/12086
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,9 @@
 # CHANGELOG UPDATES
 
 ## Ongoing
-
+* WARNING: the db schema moves from 1.93 to 1.95 and a migration is needed.
+* Unused 'disk' value is removed from media and device family.
+* Add SCSI logs.
 * TLC, Tape Library Controller, server is introduced to centralize all tape
   library commands
 * compute XXH128 extent checksum in raid1 layout during put
