pkg: update to 1.95.2
Change-Id: Ib0113a5479ce8a97a9270f68cd0f03b19bfe4993
Signed-off-by: Courrier Guillaume <guillaume.courrier@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/12464
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,11 @@
 # CHANGELOG UPDATES
 
+## 1.95.2
+* reduce verbosity of check_renew_lock log
+* install pho_ldm.h with phobos-devel
+* add network-online After condition
+* do not attempt to find a new medium for a write if no drive is available
+
 ## 1.95.1
 * common: add xmalloc, xstrdup, xcalloc...
 * ltfs: improve ltfs log with serial number
