cli: change short option `--lyt-params` to `-P`
This change is needed to let `-p` option be used for `--profile`, the
new name of the `--alias` option.

Change-Id: I19dca5c1c2aec8631c713dcb983842592b83a7a5
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14068
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Gauthier Evraerd <gauthier.evraerd@cea.fr>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # CHANGELOG UPDATES
 
+## next
+ * WARNING: the `-p` option, standing for `--lyt-params`, is uppercased, thus
+   changed to `-P`.
+
 ## 2.1.0
  * WARNING: the db schema moves from 2.0 to 2.1 and a migration is needed
  * DSS code was rewritten to merge common code and create a specific file per
