store: rename `alias` to `profile`
This new naming better stick with the idea of proposing different storage
profiles.

Change-Id: Ia820756299fbf10603ff58d336411192e2f83f83
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14069
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Gauthier Evraerd <gauthier.evraerd@cea.fr>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,8 @@
 # CHANGELOG UPDATES
 
 ## next
+ * WARNING: the `alias` feature is renamed `profile`. In that extent, all
+   `-a`/`--alias` options are renamed `-p`/`--profile`.
  * WARNING: the `-p` option, standing for `--lyt-params`, is uppercased, thus
    changed to `-P`.
 
