cfg: change [tlc_lib] to [tlc "lib"] config section names
This modification standardizes the way configuration instances are
defined. The chosen format is the one used for profiles.

BREAKING CHANGE: configuration files need to be modified accordingly.

Change-Id: I54414d81d245d950839af573868ab78ce9262019
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14279
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Gauthier Evraerd <gauthier.evraerd@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # CHANGELOG UPDATES
 
+## next
+ * WARNING: TLC section names in the configuration file are changed from
+   [tlc_libname] to [tlc "libname"]
+
 ## 2.2.0
  * WARNING: the db schema moves from 2.1 to 2.2 and a migration is needed
  * WARNING: XFER structure is modified to old N objects and the API
