locate: add --copy-name to the locate command
This patch adds the --copy-name option to the phobos locate command.
It can be used to specified which copy of an object to locate. If no
copy is specified, it will search first in the preferred_order
parameters, then default copy and finally the first copy in the DSS.

Change-Id: I85156a69272b815a9a6abf765682b6c344550a04
Signed-off-by: Gauthier EVRAERD <Gauthier.EVRAERD@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14641
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,8 @@
 ## next
  * WARNING: TLC section names in the configuration file are changed from
    [tlc_libname] to [tlc "libname"]
+ * WARNING: phobos_locate has a new argument: the copy_name. The API
+   compatibility is broken. (The lhsm_phobos copytool must be also updated.)
 
 ## 2.2.0
  * WARNING: the db schema moves from 2.1 to 2.2 and a migration is needed
