comm: fix send() failure when data exceeds socket send buffer
This patch fixes the send function to not failed when the data to send
is bigger than the internal send buffer of the socket. Previously,
large sends (e.g. during a 'lib scan' with over 1500 slots) could fail
due to partial writes being ignored, resulting in incomplete transmission
and broken behavior. (https://github.com/phobos-storage/phobos/issues/36)

This patch is the integration of the github pull request #40.
(https://github.com/phobos-storage/phobos/pull/40)

Change-Id: I2c51110bd387bc85f3242e81615a117db8ede624
Signed-off-by: Gauthier EVRAERD <gauthier.evraerd.externe@ayudata.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14828
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,7 @@
    configuration parameter allows to limit the number of concurrent writes per
    grouping on one phobosd instance. The default 0 value reproduces the
    previous unlimited behaviour.
+ * fix large sends (e.g. during a 'lib scan" with over 1500 slots)
 
 ## 3.0.0
  * WARNING: the db schema moves from 2.2 to 3.0 and a migration is needed
