db: add '3.2' schema
This schema alters the `lock` table to add a `last_locate` timestamp
that will be used to store the most recent locate invocation timestamp.

This timestamp is useful to determine is an LRS can release a medium or
not, i.e. if no recent locates requested this medium.

Change-Id: Iaa5ba04297f8c82485ba02b51263f1037526f57f
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud.externe@ayudata.fr>
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 # CHANGELOG UPDATES
 
 ## Next
+ * WARNING: the db schema moves from 3.0 to 3.2 and a migration is needed
  * WARNING: change the `phobos ping [phobosd|tlc]` command to
    `phobos phobosd ping` and `phobos tlc ping`
  * store: existing object grouping is now taken into account when creating a
