hsm: new hsm_sync_dir command
This command sync objects of the local dir.

Change-Id: I82bf52ccdb07fe86e53db5806df93b333f4d4163
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -17,6 +17,7 @@
    objects.
  * adding creation_time to extent table into DSS. This ctime is inherited from
    the corresponding existing copy creation_time.
+ * New phobos_hsm_sync_dir command
 
 ## 3.1.0
  * limited number of write per grouping: the new "fifo_max_write_per_grouping"
