dss: update 3.2 schema
This patch updates the schema for Phobos 3.2, extending the object and
deprecated_object tables with the size column.

Change-Id: I89cc0604d04e6611817cbc7094d2eb7c117d7527
Signed-off-by: VALERI Yoann <yoann.valeri@cea.fr>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,6 +13,8 @@
    and macros to check the current version is higher than a given one
  * We manage a last locate timestamp and the corresponding delay in the LRS to
    prevent after locate resource starvation.
+ * Added object size to object table in DSS. Same field is added to deprecated
+   objects.
 
 ## 3.1.0
  * limited number of write per grouping: the new "fifo_max_write_per_grouping"
