phobos: fix typos of last_locate stack
1. a merge issue line is removed from CHANGELOG
2. the hardcoded config value for locate expirancy is set to the value
   described in the documentation
3. use cmocka assert macro in an intern test
4. use local variables in test_locate.test

This commit fix the github issue #34.
This commit integrates the github pull request #52.

Change-Id: I067528d436c30bfa1a15d2a0a8900c0f2e008b0e
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -11,6 +11,8 @@
    structures.
  * Added macros to get the version Phobos from the API (major, minor and patch)
    and macros to check the current version is higher than a given one
+ * We manage a last locate timestamp and the corresponding delay in the LRS to
+   prevent after locate resource starvation.
 
 ## 3.1.0
  * limited number of write per grouping: the new "fifo_max_write_per_grouping"
