dss: add sort option for getting extent
This commits adds the sort option to the dss_extent_get function.

We use a sort on the extent creation_time to replace the
dss_get_extents_order_by_ctime function of the repack process.

Change-Id: I325115e21d30e2534b7fbe97c715253c116e400c
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # CHANGELOG UPDATES
 
+## Next
+ * Add sort option to dss_extent_get, and delete dss_get_extents_order_by_ctime
+   funtion
+
 ## 3.2.0
  * WARNING: the db schema moves from 3.0 to 3.2 and a migration is needed
  * WARNING: change the `phobos ping [phobosd|tlc]` command to
