lrs: grouping_on_dir
If this new lrs option is set to "false", grouping are not set on
dir.

Change-Id: If58a8d1a365638245c087b61eff61a739f62fafb
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 # CHANGELOG UPDATES
 
 ## Next
+ * Add grouping_on_dir configuration parameter to disengage dir from grouping
  * Add sort option to dss_extent_get, and delete dss_get_extents_order_by_ctime
    funtion
  * Add tape lost management
