lrs: release resources on client disconnection
If a client closes its socket without releasing any resource,
we need to release the corresponding resources.

The client disconnection test is updated with only one medium
(dir or tape) instead of two, in order to check that the medium
that is booked by the first crashing IO is released and available
to do the second IO.

Change-Id: I26b45226c454a1c4402e72b5ce0b7b14aaa8ca7a
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,7 @@
  * Add sort option to dss_extent_get, and delete dss_get_extents_order_by_ctime
    funtion
  * Add tape lost management
+ * LRS releases the resources on client disconnection
 
 ## 3.2.0
  * WARNING: the db schema moves from 3.0 to 3.2 and a migration is needed
